add FavoriteResponseDto for Dto